--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -10,25 +10,75 @@
   </head>
 
   <body>
-    <div class="navbar navbar-inverse">
-      <div class="container">
-        <div class="navbar-header">
-          <%= link_to('Locate&Go',posts_path, :class => "navbar-brand" ) %>
-        </div>
-        <ul class="nav navbar-nav navbar-right">
-          <% if user_signed_in? %>
-            <li>Compte connecté : <%= current_user.email %></li>
-            <li><%= link_to('Logout',destroy_user_session_path,method: :delete) %></li>
-          <% else %>
-            <li><%= link_to("Se connecter", new_user_session_path) %></li>
-            <li><%= link_to("S'inscrire", new_user_registration_path) %></li>
-          <% end %>
-        </ul>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-end">
+      <%= link_to('Locate&Go',root_path, :class => "navbar-brand mr-auto ml-1", :style => "color: #fff;" ) %>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
+      
+          <ul class="navbar-nav text-right">
+            <% if user_signed_in? %>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                  Posts
+                </a>
+                <div class="dropdown-menu">
+                  <%= link_to('Afficher tous les posts',posts_path, :class => "dropdown-item") %>
+                  <%= link_to('Créer un post',new_post_path, :class => "dropdown-item") %>
+                </div>
+              </li>
+
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                  Categories
+                </a>
+                <div class="dropdown-menu">
+                  <%= link_to('Afficher toutes les categories',categories_path, :class => "dropdown-item") %>
+                  <%= link_to('Créer une categorie',new_category_path, :class => "dropdown-item") %>
+                </div>
+              </li>
+
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                  Commentaire
+                </a>
+                <div class="dropdown-menu">
+                  <%= link_to('Afficher tous les commentaires',comments_path, :class => "dropdown-item") %>
+                  <%= link_to('Créer un commentaire',new_comment_path, :class => "dropdown-item") %>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                  <%= current_user.username %>
+                </a>
+                <div class="dropdown-menu">
+                  <%= link_to('Edit Profile',edit_user_registration_path, :class => "dropdown-item") %>
+                  <%= link_to('Logout',destroy_user_session_path,method: :delete, :class => "dropdown-item") %>
+                </div>
+              </li>
+
+            <% else %>
+              <li class="nav-item"><%= link_to("Se connecter", new_user_session_path, :class => "nav-link") %></li>
+              <li class="nav-item"><%= link_to("S'inscrire", new_user_registration_path, :class => "nav-link") %></li>
+            <% end %>
+          </ul>
       </div>
-    </div>
+    </nav>
+    <br>
     <div class="container">
-      <p class="notice"> <%= notice%> </p> 
-      <p class="alert"> <%= alert%> </p>
+      <% if !alert.nil? %>
+        <div class="alert alert-danger">
+          <p class="alert"> <%= alert %> </p>
+        </div>
+      <% end  %>
+
+      <% if !notice.nil? %>
+      <div class="alert alert-success">
+        <p class="notice"> <%= notice%> </p> 
+      </div>
+      <% end  %>
+
       <%= yield %>
     </div>
   </body>
