--- a/src/app/assets/stylesheets/scaffolds.scss
+++ b/src/app/assets/stylesheets/scaffolds.scss
@@ -1,12 +1,4 @@
-body {
-  background-color: #fff;
-  color: #333;
-  margin: 33px; }
 
-body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px; }
 
 pre {
   background-color: #eee;
@@ -18,10 +10,6 @@ a {
 
 a:visited {
   color: #666; }
-
-a:hover {
-  color: #fff;
-  background-color: #000; }
 
 th {
   padding-bottom: 5px; }
@@ -63,3 +51,8 @@ div.actions {
 
 label {
   display: block; }
+
+.responsive {
+  width: 100%;
+  height: auto;
+}
