--- a/src/app/views/categories/edit.html.erb
+++ b/src/app/views/categories/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Category</h1>
-
-<%= render 'form', category: @category %>
-
-<%= link_to 'Show', @category %> |
-<%= link_to 'Back', categories_path %>
+<div class="card">
+    <div class="card-header">
+        <h1>Editing Category</h1>
+    </div>
+    <div class="card-body">
+        <div class="form-group">
+            <%= render 'form', category: @category %>
+        </div>
+        <hr>
+        <%= link_to 'Show', @category %> |
+        <%= link_to 'Back', categories_path %>
+    </div>
+</div>
