--- a/src/app/views/categories/index.html.erb
+++ b/src/app/views/categories/index.html.erb
@@ -1,29 +1,29 @@
 <p id="notice"><%= notice %></p>
+<div class="card">
+      <div class="card-header">
+        <h1>Catégories</h1>
+      </div>
+      <div class="card-body">
+        <table class="table table-responsive-lg">
+          <thead class="thead-dark">
+            <tr>
+              <th>Name</th>
+              <th>Color</th>
+              <th colspan="3">Action</th>
+            </tr>
+          </thead>
 
-<h1>Categories</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Color</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @categories.each do |category| %>
-      <tr>
-        <td><%= category.name %></td>
-        <td><%= category.color %></td>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Category', new_category_path %>
+          <tbody>
+            <% @categories.each do |category| %>
+              <tr>
+                <td><%= category.name %></td>
+                <td><%= category.color %></td>
+                <td><%= link_to 'Show', category %></td>
+                <td><%= link_to 'Edit', edit_category_path(category) %></td>
+                <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+        <%= link_to 'New Category', new_category_path , :class => 'btn btn-primary', :style => 'color: #fff; background-color: #000000; border: none;'%>
+      </div>
