--- a/src/app/views/comments/edit.html.erb
+++ b/src/app/views/comments/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Comment</h1>
-
-<%= render 'form', comment: @comment %>
-
-<%= link_to 'Show', @comment %> |
-<%= link_to 'Back', comments_path %>
+<div class="card">
+    <div class="card-header">
+        <h1>Editing Comment</h1>
+    </div>
+    <div class="card-body">
+        <div class="form-group">
+            <%= render 'form', comment: @comment %>
+        </div>
+        <hr>
+            <%= link_to 'Show', @comment %> |
+            <%= link_to 'Back', comments_path %>
+    </div>
+</div>
