--- a/src/app/views/comments/index.html.erb
+++ b/src/app/views/comments/index.html.erb
@@ -1,31 +1,34 @@
 <p id="notice"><%= notice %></p>
+<div class="card">
+      <div class="card-header">
+        <h1>Commentaire</h1>
+      </div>
+      <div class="card-body">
+        <table class="table table-responsive-lg">
+          <thead class="thead-dark">
+            <tr>
+              <th>Name</th>
+              <th>Message</th>
+              <th>Post</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
 
-<h1>Comments</h1>
+          <tbody>
+            <% @comments.each do |comment| %>
+              <tr>
+                <td><%= comment.name %></td>
+                <td><%= comment.message %></td>
+                <td><%= comment.post_id %></td>
+                <td><%= link_to 'Show', comment %></td>
+                <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
+                <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+        <%= link_to 'New Comment', new_comment_path, :class => 'btn btn-primary', :style => 'color: #fff; background-color: #000000; border: none;'%>
+      </div>
+    </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Message</th>
-      <th>Post</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @comments.each do |comment| %>
-      <tr>
-        <td><%= comment.name %></td>
-        <td><%= comment.message %></td>
-        <td><%= comment.post_id %></td>
-        <td><%= link_to 'Show', comment %></td>
-        <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
-        <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Comment', new_comment_path %>
