--- a/src/app/views/comments/new.html.erb
+++ b/src/app/views/comments/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Comment</h1>
-
-<%= render 'form', comment: @comment %>
-
-<%= link_to 'Back', comments_path %>
+<div class="card">
+    <div class="card-header">
+        <h1>New Comment</h1>
+    </div>
+    <div class="card-body">
+        <div class="form-group">
+            <%= render 'form', comment: @comment %>
+        </div>
+        <hr>
+        <%= link_to 'Back', comments_path %>
+    </div>
+</div>
