--- a/src/app/views/comments/show.html.erb
+++ b/src/app/views/comments/show.html.erb
@@ -1,19 +1,25 @@
 <p id="notice"><%= notice %></p>
+<div class="card">
+    <div class="card-header">
+    </div>
+    <div class="card-body">
+        <div class="form-group">
+            <p>
+              <strong>Name:</strong>
+              <%= @comment.name %>
+            </p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @comment.name %>
-</p>
+            <p>
+              <strong>Message:</strong>
+              <%= @comment.message %>
+            </p>
 
-<p>
-  <strong>Message:</strong>
-  <%= @comment.message %>
-</p>
-
-<p>
-  <strong>Post:</strong>
-  <%= @comment.post_id %>
-</p>
-
-<%= link_to 'Edit', edit_comment_path(@comment) %> |
-<%= link_to 'Back', comments_path %>
+            <p>
+              <strong>Post:</strong>
+              <%= @comment.post_id %>
+            </p>
+        </div>
+          <%= link_to 'Edit', edit_comment_path(@comment) %> |
+          <%= link_to 'Back', comments_path %>
+    </div>
+</div>
