--- a/src/app/views/posts/edit.html.erb
+++ b/src/app/views/posts/edit.html.erb
@@ -1,5 +1,11 @@
-<h1>Update post</h1>
-
-<%= render 'form', post: @post %>
-
-<%= link_to("Liste articles", posts_path) %>
+<div class="card">
+    <div class="card-header">
+        <h1>Update post</h1>
+    </div>
+    <div class="card-body">
+        <div class="form-group">
+            <%= render 'form', post: @post %>
+        </div>
+        <%= link_to("Liste articles", posts_path) %> 
+    </div>
+</div>
