--- a/src/app/views/posts/index.html.erb
+++ b/src/app/views/posts/index.html.erb
@@ -1,35 +1,33 @@
-<div class="panel panel-default">
-  <div class="panel-heading"><h1>Posts</h1></div>
-  <div class="panel-body">
+  
+  <div class="card">
+      <div class="card-header">
+        <h1>Post</h1>
+      </div>
+      <div class="card-body">
+        <table class="table table-responsive-lg">
+          <thead class="thead-dark">
+            <tr>
+              <th>Title</th>
+              <th>Content</th>
+              <th>Catégories</th>
+              <th>Status</th>
+              <th colspan="3">Action</th>
+            </tr>
+          </thead>
 
-    <table>
-
-      <thead>
-        <tr>
-          <th>Title</th>
-          <th>Content</th>
-          <th>Catégories</th>
-          <th>Status</th>
-          <th colspan="3">Action</th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @posts.each do |post| %>
-        <tr>
-          <td> <%= post.title %> </td>
-          <td> <%= post.content %> </td>
-          <td> <%= post_categories_label(post.categories) %> </td>
-          <td> <%= post_status_label(post.status) %> </td>
-          <td> <%= link_to('Show', post) %> </td>
-          <td> <%= link_to('Edit', edit_post_path(post)) %> </td>
-          <td> <%= link_to('Destroy', post, method: :delete, data: { confirm: 'Supprimer ?' }) %> </td>
-        </tr>
-        <% end %>
-      </tbody>
-
-    </table>
-
-    <%= link_to "New post", new_post_path %>
+          <tbody>
+            <% @posts.each do |post| %>
+            <tr>
+              <td> <%= post.title %> </td>
+              <td> <%= post.content %> </td>
+              <td> <%= post_categories_label(post.categories) %> </td>
+              <td> <%= post_status_label(post.status) %> </td>
+              <td> <%= link_to('Show', post) %> </td>
+              <td> <%= link_to('Edit', edit_post_path(post)) %> </td>
+              <td> <%= link_to('Destroy', post, method: :delete, data: { confirm: 'Supprimer ?' }) %> </td>
+            </tr>
+            <% end %>
+          </tbody>
+      </table>
+      <%= link_to "New post", new_post_path, :class => 'btn btn-primary', :style => 'color: #fff; background-color: #000000; border: none;' %>
     </div>
-</div>
