--- a/src/app/views/posts/show.html.erb
+++ b/src/app/views/posts/show.html.erb
@@ -1,34 +1,47 @@
-<p> <%= notice %> </p>
+<div class="card">
+    <div class="card-header">
+        <h1>Show Post <%= @post.id %></h1>
+    </div>
+    <div class="card-body">
+        <div class="form-group">
+            <p>Title : <%= @post.title %></p>
+            <p>Content : <%= @post.content %></p>
+            <p>Status : <%= post_status_label(@post.status) %></p>
+        </div>
+    </div>
+</div>
 
-<p>Title : <%= @post.title %></p>
-<p>Content : <%= @post.content %></p>
-<p>Status : <%= post_status_label(@post.status) %></p>
+<br>
 
-<h1>Comments</h1>
+<div class="card">
+      <div class="card-header">
+        <h1>Commentaires</h1>
+      </div>
+      <div class="card-body">
+        <table class="table table-responsive-lg">
+          <thead class="thead-dark">
+            <tr>
+              <th>Name</th>
+              <th>Message</th>
+              <th>Post</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Message</th>
-      <th>Post</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @comments.each do |comment| %>
-      <tr>
-        <td><%= comment.name %></td>
-        <td><%= comment.message %></td>
-        <td><%= comment.post_id %></td>
-        <td><%= link_to 'Show', comment %></td>
-        <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
-        <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-
-<%= link_to "Liste articles", posts_path %>
+          <tbody>
+            <% @comments.each do |comment| %>
+              <tr>
+                <td><%= comment.name %></td>
+                <td><%= comment.message %></td>
+                <td><%= comment.post_id %></td>
+                <td><%= link_to 'Show', comment %></td>
+                <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
+                <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+          <hr>
+          <%= link_to "Liste articles", posts_path %>
+      </div>
+    </div>
