--- a/src/app/views/posts/index.html.erb
+++ b/src/app/views/posts/index.html.erb
@@ -11,7 +11,9 @@
               <th>Content</th>
               <th>Catégories</th>
               <th>Status</th>
-              <th colspan="3">Action</th>
+              <% if current_user.has_role? :admin %>
+                <th colspan="3">Action</th>
+              <% end %>
             </tr>
           </thead>
 
@@ -22,9 +24,11 @@
               <td> <%= post.content %> </td>
               <td> <%= post_categories_label(post.categories) %> </td>
               <td> <%= post_status_label(post.status) %> </td>
-              <td> <%= link_to('Show', post) %> </td>
-              <td> <%= link_to('Edit', edit_post_path(post)) %> </td>
-              <td> <%= link_to('Destroy', post, method: :delete, data: { confirm: 'Supprimer ?' }) %> </td>
+              <% if current_user.has_role? :admin %>
+                <td> <%= link_to('Show', post) %> </td>
+                <td> <%= link_to('Edit', edit_post_path(post)) %> </td>
+                <td> <%= link_to('Destroy', post, method: :delete, data: { confirm: 'Supprimer ?' }) %> </td>
+              <% end %>
             </tr>
             <% end %>
           </tbody>
