--- a/src/app/views/comments/_form.html.erb
+++ b/src/app/views/comments/_form.html.erb
@@ -12,8 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, :class => 'form-control' %>
+    <%= form.text_field :name, :value => current_user.username, :hidden => true %>
   </div>
 
   <div class="field">
@@ -23,7 +22,8 @@
 
   <div class="field">
     <%= form.label :post_id %>
-    <%= form.collection_select :post_id, @posts, :id, :title, :class => 'form-control' %>
+    <%= form.collection_select(:post_id, @posts, :id, :title) %>
+    
   </div>
 
   <div>
