--- a/src/app/views/home/home.html.erb
+++ b/src/app/views/home/home.html.erb
@@ -1,4 +1,3 @@
-    <h1 class="text-center" style="font-size: 80px;">Locate&Go</h1>
-    <%= image_tag "movies.jpg", :class => "responsive" %>
-    <hr>
-    <p>Louer vos films très facilement avec Locate&Go</p>
+<%= image_tag "movies.jpg", :class => "responsive" %>
+<hr>
+<p>Retrouvez les dernières nouveautés films, 4 mois seulement après leur sortie cinéma. Un catalogue de plus de 10 000 films pour une soirée cinéma à la maison réussie ! </p>
