--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>App</title>
+    <title>Locate & Go</title>
+    <%= favicon_link_tag 'lg.ico' %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,73 +11,78 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-end">
-      <%= link_to('Locate&Go',root_path, :class => "navbar-brand mr-auto ml-1", :style => "color: #fff;" ) %>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
-          <ul class="navbar-nav text-right">
-            <% if user_signed_in? %>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                  Posts
-                </a>
-                <div class="dropdown-menu">
-                  <%= link_to('Afficher tous les posts',posts_path, :class => "dropdown-item") %>
-                  <%= link_to('Créer un post',new_post_path, :class => "dropdown-item") %>
-                </div>
-              </li>
 
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                  Categories
-                </a>
-                <div class="dropdown-menu">
-                  <%= link_to('Afficher toutes les categories',categories_path, :class => "dropdown-item") %>
-                  <%= link_to('Créer une categorie',new_category_path, :class => "dropdown-item") %>
-                </div>
-              </li>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-end">
 
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                  Commentaire
-                </a>
-                <div class="dropdown-menu">
+    <%= link_to('Locate & Go',root_path, :class => "navbar-brand mr-auto ml-1", :style => "color: #fff;" ) %>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+      
+    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+      <ul class="navbar-nav ml-auto">
+      <% if user_signed_in? %>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Post</a>
+          <div class="dropdown-menu">
+            <%= link_to('Afficher tous les posts',posts_path, :class => "dropdown-item") %>
+            <%= link_to('Créer un post',new_post_path, :class => "dropdown-item") %>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Catégories</a>
+          <div class="dropdown-menu">
                   <%= link_to('Afficher tous les commentaires',comments_path, :class => "dropdown-item") %>
                   <%= link_to('Créer un commentaire',new_comment_path, :class => "dropdown-item") %>
-                </div>
-              </li>
-              <% if current_user.has_role? :admin  %>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                    Roles
-                  </a>
-                  <div class="dropdown-menu">
-                    <%= link_to('Afficher les roles',roles_path, :class => "dropdown-item") %>
-                    <%= link_to('Créer un role',new_role_path, :class => "dropdown-item") %>
-                  </div>
-                </li>
-              <% end %>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                  <%= current_user.username %>
-                </a>
-                <div class="dropdown-menu">
-                  <%= link_to('Edit Profile',edit_user_registration_path, :class => "dropdown-item") %>
-                  <%= link_to('Logout',destroy_user_session_path,method: :delete, :class => "dropdown-item") %>
-                </div>
-              </li>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+            Commentaire
+          </a>
+          <div class="dropdown-menu dropdown-menu-right">
+            <%= link_to('Afficher tous les commentaires',comments_path, :class => "dropdown-item") %>
+            <%= link_to('Créer un commentaire',new_comment_path, :class => "dropdown-item") %>
+          </div>
+        </li>
+        <% if current_user.has_role? :admin  %>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+            Roles
+          </a>
+          <div class="dropdown-menu">
+            <%= link_to('Afficher les roles',roles_path, :class => "dropdown-item") %>
+            <%= link_to('Créer un role',new_role_path, :class => "dropdown-item") %>
+          </div>
+        </li>
+        <% end %>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <%= current_user.username %>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+            <%= link_to('Compte',edit_user_registration_path, :class => "dropdown-item") %>
+            <div class="dropdown-divider"></div>
+            <%= link_to('Déconnexion',destroy_user_session_path,method: :delete, :class => "dropdown-item text-danger") %>
+          </div>
+        </li>
+        <% else %>
+        <li class="nav-item"><%= link_to("Se connecter", new_user_session_path, :class => "nav-link") %></li>
+        <li class="nav-item"><%= link_to("S'inscrire", new_user_registration_path, :class => "nav-link") %></li>
+        <% end %>
+      </ul>
+    </div>
+  </nav>
 
-            <% else %>
-              <li class="nav-item"><%= link_to("Se connecter", new_user_session_path, :class => "nav-link") %></li>
-              <li class="nav-item"><%= link_to("S'inscrire", new_user_registration_path, :class => "nav-link") %></li>
-            <% end %>
-          </ul>
-      </div>
-    </nav>
-    <br>
-    <div class="container">
+  <main>
+
+  <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">Locate & Go</h1>
+    <p class="lead">Retrouvez tous vos films et séries préférées en vidéo à la demande (VOD) avec Locate & Go.</p>
+  </div>
+
+  <div class="container">
       <% if !alert.nil? %>
         <div class="alert alert-danger">
           <p class="alert"> <%= alert %> </p>
@@ -89,6 +95,15 @@
       </div>
       <% end  %>
       <%= yield %>
-    </div>
+  </div>
+
+  </main>
+
+  <footer class="text-muted">
+      <div class="container">
+        <p>Locate & Go - Projet Ruby 2019-2020</p>
+      </div>
+    </footer>
+
   </body>
 </html>
