Ajout de l'îcone

--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -2,10 +2,9 @@
 <html>
   <head>
     <title>Locate & Go</title>
-    <%= favicon_link_tag 'lg.ico' %>
+    <%= favicon_link_tag 'locate_and_go.ico' %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
