--- a/src/app/views/users/_form.html.erb
+++ b/src/app/views/users/_form.html.erb
@@ -1,23 +1,34 @@
-<%= form_with(model: user, local: true) do |form| %>
+<%= form_with(model: @user, local: true) do |form| %>
 
   <% if user.errors.any? %>
-  <div>
-    <h2><%= pluralize(user.errors.count, "error") %></h2>
-    <ul>
-      <% user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
+    <div>
+      <h2><%= pluralize(user.errors.count, "error") %></h2>
+      <ul>
+        <% user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
   <% end %>
-  <% @idRole = @user.roles.ids %>
-    <% @idRole.each do |id|  %>
-      <% @unId = id %>
-    <% end %>
+
+    <div class="field">
+      <%= form.label :username %>
+      <%= form.text_field :username, autofocus: true, autocomplete: "username", :class => 'form-control' %>
+    </div>
+
+    <div>
+      <%= form.label :email %>
+      <%= form.email_field :email, autofocus: true, autocomplete: "email", :class => 'form-control'%>
+    </div>
+
+    <div class="field">
+      <%= form.label :password %>
+      <%= form.password_field :password, :class => 'form-control' %>
+    </div>
+
     <div>
       <%= form.label :role %>
-      <%= form.collection_select(:role, @roles, :id, :name) %>
-      
+      <%= form.collection_select(:role_ids, Role.all, :id, :name) %>
     </div>
 
     <br>
