--- a/src/app/views/users/index.html.erb
+++ b/src/app/views/users/index.html.erb
@@ -1,4 +1,3 @@
-
   <div class="card">
       <div class="card-header">
         <h1>Users</h1>
@@ -16,12 +15,15 @@
           </thead>
           <tbody>
             <% @users.each do |user| %>
+                <% if user.has_role? :admin %>
+                  <% user.remove_role :user %>
+                <% end %>
                 <tr>
                   <% @idRole = user.roles.ids %>
                   <td> <%= user.id %> </td>
                   <td> <%= user.username %> </td>
                   <td> <%= user.email %> </td>
-                  <td> 
+                  <td>
                     <% @idRole.each do |id|  %>
                       <% @unId = id %>
                     <% end %>
