Ajout des chemins

--- a/src/app/views/home/home.html.erb
+++ b/src/app/views/home/home.html.erb
@@ -1,3 +1,3 @@
-<%= image_tag "movies.jpg", :class => "responsive" %>
+<%= link_to image_tag("movies.jpg"), {action: 'index', controller: 'media'}, {class: 'responsive'} %>
 <hr>
 <p>Retrouvez les dernières nouveautés films, 4 mois seulement après leur sortie cinéma. Un catalogue de plus de 10 000 films pour une soirée cinéma à la maison réussie ! </p>
