--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -75,6 +75,7 @@
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
             <%= link_to('Compte',edit_user_registration_path, :class => "dropdown-item") %>
+            <%= link_to('Ajouter un film ou une série', new_medium_path, :class => "dropdown-item") %>
             <div class="dropdown-divider"></div>
             <%= link_to('Déconnexion',destroy_user_session_path,method: :delete, :class => "dropdown-item text-danger") %>
           </div>
