--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -116,11 +116,11 @@
 
   </main>
 
-  <footer class="text-muted">
+  <footer class="footer">
       <div class="container">
-        <p>Locate & Go - Projet Ruby 2019-2020</p>
+        <span class="text-muted">Locate & Go - Projet Ruby 2020</span>
       </div>
-    </footer>
+  </footer>
 
   </body>
 </html>
