--- a/src/app/views/media/edit.html.erb
+++ b/src/app/views/media/edit.html.erb
@@ -1,5 +1,3 @@
-<h1>Edit post</h1>
+<h1>Modification du film <%= @media.title %></h1>
 
 <%= render 'form', media: @media %>
-
-<%= link_to("Vidéothèque", media_path)%>
